--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -216,8 +216,8 @@ body.dark-mode {
 /* For screens smaller than 768px (mobile) */
 @media (max-width: 767px) {
   .tooltip-content {
-    width: 95vw !important;
-    max-width: none !important;
+    width: 95vw;
+    max-width: none;
     /* Remove min-width */
   }
 }
